# profile-agent

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  MEMORY.md  PROGRESS.md  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: arc-test.yaml  build-push-deploy.yml
agent/: main.py  pyproject.toml
agent/common/: custom_agent.py  profile.py  resume_agent.py  tools.py
docs/: chat-window-design.md
k8s/: COMPOSE.md  README.md  docker-compose.yml
k8s/base/: app-deployment.yaml  app-service.yaml  config-map.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret-template.yaml
k8s/overlays/local/: kustomization.yaml
scripts/: build-docker.sh  deploy-k8s.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/get-signed-url/: route.ts
src/app/api/share-profile/: route.ts
src/components/: VoiceAgent.tsx  chat-messages.tsx  chat-suggestions.tsx  copilot-provider.tsx  copilot-sidebar.tsx  profile-page-content.tsx
src/contexts/: thinking-context.tsx
src/hooks/: useProfileAgentTools.tsx
