[project]
name = "profile-agent"
version = "0.1.0"
description = "Profile Agent with shared state"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn[standard]==0.38.0",
    "python-dotenv==1.2.1",
    "pydantic==2.12.5",
    "google-adk[a2a]==1.31.0",
    "a2a-sdk==0.3.22",
    "google-genai==1.73.1",
    "ag-ui-adk==0.3.6",
    "ipdb==0.13.13",
    "opik==1.10.1",
    "langfuse==3.10.5",
    "openinference-instrumentation-google-adk==0.1.8",
    "litellm==1.81.6",
    "reportlab==4.4.10",
]
